Fix positioning of menu on mobile

--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -3,16 +3,12 @@
 .nav {
   position: fixed;
   z-index: 1;
-  bottom: 5rem;
+  bottom: 0;
   right: 0;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   color: white;
-
-  @include tablet {
-    bottom: 0;
-  }
 
   &__list {
     align-self: flex-end;
